# smb-decomp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile_pc  README.md  dawn_fixes.patch  make_context.sh  static.lcf  stubs.c  stubs.c.old
asm/: bg_master.s  bg_old_bluesky.s  bg_old_extramaster.s  bg_old_ice.s  bg_old_water.s  bg_pilot.s  c++_exception_data.s  code_1.s  code_5.s  credits.s  ending.s  ending_2.s  ending_dialogue.s  mini_billiards.s  mini_bowling.s  mini_commend.s  mini_fight.s  mini_golf.s  mini_pilot.s  mini_race.s  mini_ranking.s  option.s  sel_ngc_rel.s  shadow.s  test_mode.s  unk_anim_data.s  vibration.s  window.s
asm/nonmatchings/: PADResetCallback.s  bg_pilot_draw.s  draw_controls_info.s  ev_sound_init.s  func_8004AA18.s  func_80064C30.s  func_80082C6C.s  grading_play.s  input_main.s  show_dvd_err_msg.s
data/: bg_ending.gma.h
disasm-tools/: label_gx_constants.py  string_tables_to_c.py
include/: math.h  ppcintrinsic.h
include/dolphin/: GXBump.h  GXCpu2Efb.h  GXEnum.h  GXFrameBuffer.h  GXGeometry.h  GXPixel.h  GXStruct.h  GXTexture.h  OSThread.h  card.h  exi.h  gx.h  hw_regs.h  mtx.h  os.h  pad.h  vi.h
include/dolphin/gx/: GXBump.h  GXCpu2Efb.h  GXCull.h  GXDispList.h  GXDraw.h  GXFifo.h  GXFrameBuffer.h  GXGeometry.h  GXGet.h  GXLighting.h  GXManage.h  GXPerf.h  GXPixel.h  GXStruct.h  GXTev.h  GXTexture.h  GXTransform.h  GXVert.h
include/musyx/: musyx.h
libraries/NdevExi2A/: DebuggerDriver.c
libraries/ai/: ai.c
libraries/amcExi/: AmcExi.c  AmcExi2Comm.c
libraries/amcExi/asm/: AmcExi.s  AmcExi2Comm.s
libraries/amcExi2/: AmcExi.c  AmcExi2Comm.c  __amcExi2.h
libraries/card/: CARDBios.c  CARDBlock.c  CARDCheck.c  CARDCreate.c  CARDDelete.c  CARDDir.c  CARDFormat.c  CARDMount.c  CARDOpen.c  CARDRdwr.c  CARDRead.c  CARDRename.c  CARDStat.c  CARDUnlock.c  CARDWrite.c  __card.h
libraries/card/asm/: CARDBlock.s  CARDCheck.s  CARDMount.s
libraries/demo/: DEMOFont.c
libraries/dolphin_pc/: GX_gles2.c  dvd.c  pad_dinput.c  pad_evdev.c
libraries/dsp/: dsp.c  dsp_task.c
libraries/dvd/asm/: dvd.s
libraries/exi/asm/: EXIUart.s
libraries/gx/: GXDisplayList.c  GXGeometry.c  GXInit.c  GXLight.c  GXTev.c  GXTransform.c  __gx.h
libraries/gx/asm/: GXAttr.s  GXDraw.s  GXTexture.s
libraries/hio/: hio.c
libraries/mtx/: mtx44.c
libraries/mtx/asm/: mtx.s
libraries/musyx/: HARDWARE.c  hw_volconv.c  musyx_priv.h  snd3d.c  snd_synthapi.c
libraries/musyx/asm/: hw_dspctrl.s  seq.s  snd_midictrl.s  synth.s
libraries/odemustubs/asm/: odemustubs.s
libraries/os/: OSAlloc.c  OSAudioSystem.c  OSThread.c  __os.h  __ppc_eabi_init.c
libraries/os/asm/: OS.s  OSContext.s  OSExi.s  OSInterrupt.s  OSReboot.s  OSResetSW.s
libraries/pad/: Pad.c
libraries/perf/asm/: perf.s
libraries/si/: __si.h
libraries/si/asm/: SIBios.s
libraries/vi/asm/: vi.s
src/: adv.c  ape_icon.c  ape_icon.h  avdisp.c  avdisp.h  background.c  background.h  ball.c  ball.h  bg_bonus.c  bg_end.c  bg_jungle.c  bg_master.c  bg_old_bluesky.c  bg_old_bonus.c  bg_old_cave.c  bg_old_extramaster.c  bg_old_ice.c  bg_old_night.c  bg_old_sand.c  bg_old_space.c  bg_old_storm.c  bg_old_sunset.c  bg_old_water.c  bg_pilot.c  bg_sand.c  bg_space.c  bg_storm.c  bg_sunset.c  bg_water.c  bitmap.c  bitmap.h  byteswap.cpp  camera.c  camera.h  code_1.c  code_2.c  code_3.c  code_5.c  code_7.c  (+129 more)
tools/: stb_dxt.h  tpltool.c
